# GameB

./: CMakeLists.txt  GameB.h  GameB.sln  GameB.vcxproj  GameB.vcxproj.filters  GameCharacterNamingScreen.c  GameCharacterNamingScreen.h  GameMainMenuScreen.c  GameMainMenuScreen.h  GameOpeningSplashScreen.c  GameOpeningSplashScreen.h  GameOptionsScreen.c  GameOptionsScreen.h  GameOverworldScreen.c  GameOverworldScreen.h  GameYesOrNoExitMenu.c  GameYesOrNoExitMenu.h  Log1.txt  Main.c  copyassets.bat  main.c  menu.c  menu.h  projectdeclarations.c  projectdeclarations.h
assets/: Hero_Suit0_Up_Walk2.bmp~
logs/: log1  log2  log3.txt  log4
